fix(speaker): change image width to prevent overlapping

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -612,7 +612,7 @@
   --speakers-picture-border-radius-mobile:50%;
   --speakers-picture-border-radius:50%;
   --speakers-picture-img-max-width:var(--quote-picture-img-max-width);
-  --speakers-picture-img-width: 43vw;
+  --speakers-picture-img-width:100%;
   --text-decoration-hover:underline solid var(--color-orange) 1px;
   --text-decoration:underline solid var(--link-underline-color) 1px;
   --tickets-button-background-color-hover-primary:var(--button-background-color-hover-primary);
